mule-user-guide/v/3.2/database-jdbc-endpoint-reference.adoc
image:JDBC-Endpoint-48x32.png[JDBC-端点-48x32]

= 数据库（JDBC）端点引用

== 概述

数据库端点有时被称为"JDBC Endpoint,"，它实现了一个传输通道来将您的Mule应用程序连接到任何JDBC兼容的数据库。您可以将数据库端点实现为具有单向交换模式的入站端点，或者配置为单向或请求响应交换模式的出站端点。

使用数据库端点在数据库记录上执行创建，读取，更新和删除操作（通常由缩写CRUD引用）。如果您使用的是EE版本，它还可以调用存储在数据库中的过程，例如动态创建新表。

== 配置

数据库端点配置包含三个阶段：

. 决定将数据库终结点放置在Mule流中的哪个位置，然后将它从Palette中拖放到组成Mule流的构建模块序列中的适当位置。
. 如果将数据库端点放置在流的开始位置，它将作为轮询入站端点（即消息源），通过以轮询频率字段指定的间隔执行查询来触发流。这必然对应于入站端点的单向交换模式。

[%header%autowidth.spread]
|===
| image:check.png[查]  |有关交换模式的详细信息，请参阅： link:/mule-user-guide/v/3.2/mule-studio-essentials[关于主要流程]

|===
+
 +
. 如果将JDBC构建块放在流的中间或末尾，它将用作出站端点，也就是说，它将作为执行SQL代码的处理器。不同的SQL语句返回不同的数据类型。例如，查询返回地图列表，Store Procedures（仅适用于EE）返回地图，而其他更新语句不返回任何内容。
. 通过为*Properties*窗格上各个选项卡上的字段提供值来配置数据库端点，您可以通过双击消息流画布上的JDBC图标来打开它。

*Database Endpoint Properties*面板包含五个选项卡，详细信息如下：

常规选项卡=== 

image:DatabaseEndpointGen.png[DatabaseEndpointGen]

[%header%autowidth.spread]
|===
|属性 |说明
| *Display Name*  |默认为通用端点名称，在本例中为JDBC。更改显示名称（必须是字母数字）以反映端点的特定角色，即`Order Entry Endpoint`
| *Exchange-Pattern*  |如果设置为入站或出站端点的单向（缺省值），则数据库端点将传入数据发送到流中的下一个构建块。如果设置为仅针对出站数据库端点的请求响应，则端点在发送数据之前会等待响应。
| *Query Key*  |指定在访问数据库时使用哪个查询。
| *SQL*语句 |有关详细信息，请参阅SQL语句。
| *Transaction Type*  |从下拉列表中选择数据库资源的访问方式。可用选项包括无事务，XA事务和JDBC事务。
| *Transaction Action*  |从下拉列表中选择事务访问数据库的方式。
| *Transaction Timeout*  |以毫秒为单位输入超时以等待操作完成。
| *Interact with External*  |勾选此框允许Mule与Mule以外的交易进行交互。例如，如果外部事务处于活动状态，则BEGIN_OR_JOIN将加入，并且ALWAYS_BEGIN将导致引发exceprion。
|===

====  SQL语句

仅当在流配置期间指定了Mule Enterprise Edition运行时时，此面板（*below*）才会替换*General Tab*上的*Query*面板。

image:JDBC_SQLStatement.png[JDBC_SQLStatement]

该面板有助于指定SQL查询以及存储过程。要选择存储过程，请完成以下步骤：

. 点击*Properties*上的*General*标签*SQL Statement*面板中标有*Key*的文本框右侧的绿色{{1} **Database (JDBC) Endpoint**的窗格。
. 弹出*Query*对话框（*below*）后，在标有*Query Key*的文本框中键入要识别的存储过程的密钥。
. 在标有*Query*的大文本框中，键入要执行的SQL语句。
. （可选）在标记为*Query Reference*的文本框中，键入???
. 如果您对字段中的条目满意，请点击*Finish*提交。

image:JDBC_Query.png[JDBC_Query]

=== 高级选项卡

image:DatabaseEndpointAdv.png[DatabaseEndpointAdv]

[%header%autowidth.spread]
|===
|属性 |说明
| *Address*  |输入该端点的地址，即jdbc：// getTest？type = 1。
| *Response Timeout*  |指定端点必须等待响应的时间（以毫秒为单位）。默认值是*1000* ms。
| *Encoding*  |从下拉列表中选择用于消息数据的字符集。 （即UTF-8）。
| *Disable Transport Transformer*  |如果您不想使用端点的默认响应传输，请选中此框。
| *MIME Type*  |从下拉列表中选择此端点支持的格式之一。
| *Query Timeout*  | _（仅适用于出站数据库端点）_。指定数据库端点等待SQL语句返回响应的时间（以毫秒为单位）。
| *Polling Frequency*  | _（仅适用于入站数据库端点）_。指定检查传入消息的频率。默认值是*1000*毫秒。
|===

=== 参考选项卡

image:DatabaseEndpointRef.png[DatabaseEndpointRef]

[%header%autowidth.spread]
|===
|属性 |说明
| *Endpoint Reference*  |使用下拉列表选择以前配置的全局端点引用。如果您尚未为此类端点创建全局元素，则可以通过单击*Add*从此窗口中完成此操作。点击*Edit*修改先前创建的全局元素。
| *Connector Reference*  |使用下拉列表为此端点选择以前配置的连接器。如果您尚未为此类端点创建连接器，则可以通过单击*Add*在此窗口中完成此操作。点击*Edit*修改先前创建的全局元素。
| *Request Transformer References*  |输入一个同步转换器列表，它将在发送到传输器之前应用于请求。
| *Response Transformer References*  |输入一个同步转换器列表，它将在传输返回之前应用于响应。
|===

=== 查询标签

image:DatabaseEndpointQue.png[DatabaseEndpointQue]

您可以输入此端点的SQL查询，它包含以下内容：

•一键+
•值+
•值引用（可选）

=== 文档选项卡

文档选项卡允许您为端点添加可选的描述性文档。每个端点组件都有一个文档选项卡和可选的*Description*字段。

image:DatabaseEndpointDoc.png[DatabaseEndpointDoc]

[%header%autowidth.spread]
|===
| {字段{1}}说明
| *Documentation*  |输入此数据库端点的详细说明，以便在将鼠标悬停在端点图标上时弹出的黄色帮助气球中显示。
|===

== 文档参考

有关使用XML编辑器设置数据库端点属性的详细信息，请参阅以下内容：

*  link:/mule-user-guide/v/3.2/jdbc-transport-reference[JDBC传输参考]
*  link:/mule-user-guide/v/3.2/jdbc-transport-configuration-reference[JDBC传输配置参考]
